--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -5,7 +5,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-md-0" >
         <ng-container *ngIf="_accountService.currentUser$ | async">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/members" routerLinkActive="active">Online User</a>
+            <a class="nav-link" routerLink="/members" routerLinkActive="active">Users</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
