--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -20,7 +20,8 @@
       </ul>
 
       <div class="dropdown" *ngIf="(_accountService.currentUser$ | async) as user" dropdown>
-        <a  class="dropdown-toggle text-ligth" dropdownToggle>Welcome {{user.userName | titlecase}}  </a>
+        <img src="{{user.photoUrl}}" alt="{{user.userName}}">
+        <a  class="dropdown-toggle text-ligth m-2" dropdownToggle>Welcome {{user.userName | titlecase}}  </a>
         <div class="dropdown-menu mt-3" *dropdownMenu>
           <a href="" class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
           <div class="dropdown-divider"></div>
