pagination, sorting filtering

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -14,11 +14,11 @@
         </div>
         <div>
           <strong>Last Active</strong>
-          <p>{{member.lastActive}}</p>
+          <p>{{member.lastActive | timeago}}</p>
         </div>
         <div>
           <strong>Member since:</strong>
-          <p>{{member.created}}</p>
+          <p>{{member.created | date: 'dd:MMM:yyyy'}}</p>
         </div>
       </div>
       <div class="card-footer">
@@ -38,7 +38,7 @@
       </tab>
       <tab heading="Interests">
         <h4>Interests</h4>
-        <p>{{member.Interests}}</p>
+        <p>{{member.interests}}</p>
       </tab>
       <tab heading="Photos">
        <ngx-gallery [options]="galleryOptions" [images]="galleryImages"
